--- a/styles/general.css
+++ b/styles/general.css
@@ -4,7 +4,7 @@
 	justify-content: space-between;
 
 	height: 90vh;
-	width: 100%;
+	width: 90%;
 
 	position: relative;
 }
@@ -17,7 +17,8 @@
 	width: 100vw;
 
 	z-index: 1000;
-	background-color: rgba(0, 0, 0, 0.1);
+	background-color: rgba(0, 0, 0, 0.3);
+	backdrop-filter: blur(4px);
 
 	/* display: none; */
 }
