--- a/styles/landing.css
+++ b/styles/landing.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 1250px) {
+	#black-offset {
+		display: none;
+	}
+}
+
 .landing-container {
 	align-items: flex-start;
 	padding: 4rem 2rem 4rem 2rem;
@@ -9,7 +15,7 @@
 	top: 4rem;
 
 	height: calc(100% - 8rem);
-	width: 45%;
+	width: 45vw;
 	background-color: black;
 	z-index: -1;
 }
