--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,3 +1,48 @@
+.m-p-tile {
+	height: 12rem;
+	width: 100%;
+	border-bottom: solid black 1px;
+
+	padding: 0 2rem;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+}
+.m-p-tile-clicked {
+	height: 12rem;
+	width: 100%;
+	border-bottom: solid black 1px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 4rem;
+
+	background-color: lightgray;
+}
+.m-p-tile-clicked > a {
+	background-color: white;
+	width: 35%;
+	padding: 0.5rem;
+	border: solid black 1px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.m-p-company {
+	font-size: 3rem;
+	line-height: 2rem;
+	margin-bottom: 1rem;
+	font-weight: bold;
+}
+.m-p-blurp {
+	font-size: 1.25rem;
+	width: 75%;
+}
+
 .project-container {
 	align-items: center;
 	padding: 2rem 2rem 2rem 2rem;
