--- a/styles/experience.css
+++ b/styles/experience.css
@@ -1,3 +1,16 @@
+#m-e-load-button {
+	width: 100%;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-bottom: 1px black solid;
+	font-size: 2rem;
+
+	background-color: black;
+	color: white;
+}
+
 .m-experience-topbar {
 	width: 100%;
 
