--- a/styles/landing.css
+++ b/styles/landing.css
@@ -2,8 +2,9 @@
 	font-size: 2rem;
 }
 #m-landing-title {
-	font-size: 5rem;
+	font-size: 4rem;
 	line-height: 3rem;
+	padding-bottom: 2rem;
 }
 
 .m-link-list {
