--- a/styles/experience.css
+++ b/styles/experience.css
@@ -32,14 +32,14 @@
 	padding: 0 1rem;
 
 	font-size: 3rem;
-	line-height: 1rem;
+	line-height: 1.1rem;
 
 	padding-bottom: 2rem;
 	border-bottom: solid black 2px;
 	font-weight: bold;
 
 	width: 90%;
-	overflow-x: scroll;
+	overflow: scroll;
 	white-space: nowrap;
 
 	-ms-overflow-style: none; /* IE and Edge */
@@ -95,7 +95,7 @@
 	flex-direction: column;
 
 	width: 100%;
-	padding-bottom: 4rem;
+	padding-bottom: 2rem;
 }
 .m-experience-list > div {
 	flex: 1;
