--- a/styles/general.css
+++ b/styles/general.css
@@ -29,8 +29,8 @@
 }
 
 .m-section-title {
-	font-size: 3rem;
-	padding-bottom: 1rem;
+	font-size: 2.5rem;
+	font-weight: bold;
 	width: 100%;
 
 	display: flex;
