--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -11,6 +11,7 @@ font-family: 'Raleway', sans-serif;
 */
 
 @import url('navbar.css');
+@import url('landing.css');
 @import url('general.css');
 @import url('experience.css');
 @import url('projects.css');
