--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@500&family=Michroma&family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -11,11 +12,12 @@ font-family: 'Raleway', sans-serif;
 */
 
 @import 'general';
+@import 'variables.scss';
 
 * {
 	padding: 0;
 	margin: 0;
-	font-family: 'Darker Grotesque', sans-serif !important;
+	font-family: $font-primary;
 	font-size: 16px;
 
 	box-sizing: border-box;
