--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -22,3 +22,13 @@ font-family: 'Raleway', sans-serif;
 
 	box-sizing: border-box;
 }
+
+*::-webkit-scrollbar {
+	display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+}
