--- a/styles/global/general.scss
+++ b/styles/global/general.scss
@@ -47,15 +47,14 @@
 }
 
 .overlay {
-	position: fixed;
+	position: fixed !important;
 	top: 0;
 	left: 0;
+
 	height: 100vh;
 	width: 100vw;
 
 	z-index: 1000;
 	background-color: rgba(0, 0, 0, 0.3);
 	backdrop-filter: blur(4px);
-
-	/* display: none; */
 }
