--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -169,20 +169,46 @@
 	align-items: center;
 }
 
-.experienceBox > div:nth-child(2) {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr;
-
-	height: 92.5%;
+.experienceScreen {
+	flex: 1;
 	width: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.experinceRow {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+
+	flex: 1;
+	width: 100%;
+}
+.experienceRow2 {
+	@extend .experinceRow;
+
+	& > div:first-child {
+		width: 60%;
+	}
+	& > div:nth-child(2) {
+		flex: 1;
+	}
+}
+.experienceRow3 {
+	@extend .experinceRow;
+
+	& > div {
+		flex: 1;
+	}
 }
 
 // Experience.tsx
 .experience {
-	border-bottom: 2px solid black;
-	border-right: 2px solid black;
-
 	position: relative;
+	height: 100%;
 }
 .experience:hover {
 	background: lightgray;
