--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -209,39 +209,21 @@
 .experience {
 	position: relative;
 	height: 100%;
-}
-.experience:hover {
-	background: lightgray;
-	cursor: pointer;
-}
-.experience:active {
-	background: darkgray;
-}
 
-.experience > * {
-	position: absolute;
-}
+	font-family: $font-primary;
 
-.experience > img {
-	width: 20%;
+	&:hover {
+		background: lightgray;
+		cursor: pointer;
+	}
 
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
+	&:active {
+		background: darkgray;
+	}
 
-.info {
-	top: 0;
-	left: 0;
-
-	display: flex;
-	flex-direction: column;
-
-	padding: 0.5rem 1rem;
-}
-.title {
-	font-size: 1.5rem;
-	font-weight: bold;
+	& .current {
+		font-family: $font-secondary;
+	}
 }
 
 .experienceModal {
@@ -342,4 +324,51 @@
 .responsibilityContent {
 	padding: 0.5rem;
 	font-size: 0.9rem;
+}
+
+.card1 {
+	@extend .experience;
+
+	& > img {
+		position: absolute;
+		width: 20%;
+
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	.info {
+		top: 0;
+		left: 0;
+
+		display: flex;
+		flex-direction: column;
+
+		padding: 0.5rem 1rem;
+	}
+	.title {
+		font-size: 1.5rem;
+		font-weight: bold;
+	}
+}
+
+.card2 {
+	@extend .experience;
+
+	display: flex;
+	flex-direction: column;
+
+	justify-content: center;
+	align-items: center;
+	gap: 0.75rem;
+
+	& > img {
+		width: 4rem;
+	}
+
+	.title {
+		font-size: 2rem;
+		font-weight: bold;
+	}
 }
