--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -372,3 +372,101 @@
 		font-weight: bold;
 	}
 }
+
+.card3 {
+	@extend .experience;
+
+	display: flex;
+	flex-direction: column;
+
+	justify-content: center;
+	align-items: center;
+	.circle {
+		height: 100%;
+		width: 100%;
+
+		border-radius: 50%;
+		border: 1.5px solid black;
+
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		gap: 0.5rem;
+	}
+	.circle > img {
+		width: 4rem;
+	}
+
+	.title {
+		font-size: 2rem;
+		font-weight: bold;
+	}
+}
+
+.card4 {
+	@extend .experience;
+
+	display: flex;
+	flex-direction: column;
+
+	justify-content: center;
+	align-items: center;
+
+	.row {
+		width: 100%;
+		height: 20%;
+
+		display: flex;
+
+		border-bottom: 1px solid black;
+		border-right: 1px solid black;
+	}
+
+	.imgContainer {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+
+		img {
+			width: 50%;
+			max-height: 90%;
+		}
+	}
+
+	.row > * {
+		height: 100%;
+	}
+	.row > div:not(:first-child) {
+		width: 40%;
+		border-left: solid black 1px;
+	}
+	.row > div:first-child {
+		flex: 1;
+	}
+
+	.contentRow {
+		@extend .row;
+
+		flex: 1;
+	}
+
+	img {
+		width: 100%;
+		max-width: 100%;
+		max-height: 100%;
+	}
+
+	.title {
+		font-size: 1.5rem;
+		font-weight: bold;
+
+		padding: 0.5rem;
+		overflow: hidden;
+		overflow-wrap: break-word;
+
+		text-transform: uppercase;
+	}
+}
