--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -246,7 +246,9 @@
 	flex-direction: column;
 	justify-content: space-between;
 
-	font-weight: bold;
+	* {
+		font-family: $font-secondary;
+	}
 }
 .modalHeader {
 	display: flex;
@@ -304,6 +306,7 @@
 
 	border: 2px solid black;
 	border-right: 0px solid black;
+	border-bottom: 0px solid black;
 
 	flex-direction: column;
 }
@@ -421,7 +424,6 @@
 		display: flex;
 
 		border-bottom: 1px solid black;
-		border-right: 1px solid black;
 	}
 
 	.imgContainer {
@@ -468,5 +470,80 @@
 		overflow-wrap: break-word;
 
 		text-transform: uppercase;
+	}
+}
+.card5 {
+	position: relative;
+	height: 100%;
+	width: 100%;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	.line {
+		position: absolute;
+		background-color: #000;
+	}
+	.innerBox {
+		position: absolute;
+		width: 75%;
+		height: 75%;
+
+		border: solid 2px black;
+
+		& > img {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+
+			transform: translate(-50%, -50%);
+
+			width: 5rem;
+		}
+
+		.info {
+			top: 0;
+			left: 0;
+
+			display: flex;
+			flex-direction: column;
+
+			padding: 0.5rem 1rem;
+		}
+		.title {
+			font-size: 1.5rem;
+			font-weight: bold;
+		}
+	}
+
+	.lineVertical {
+		@extend .line;
+		width: 2px;
+		height: 100%;
+		left: 75%;
+	}
+
+	.lineHorizontal {
+		@extend .line;
+		width: 100%;
+		height: 2px;
+		top: 30%;
+	}
+
+	&:hover .lineHorizontal,
+	&:hover .lineVertical {
+		animation: shrink 1s forwards;
+	}
+
+	&:hover {
+		background: lightgray;
+	}
+
+	@keyframes shrink {
+		to {
+			width: 0;
+			height: 0;
+		}
 	}
 }
