--- a/styles/modules/landing.module.scss
+++ b/styles/modules/landing.module.scss
@@ -19,7 +19,7 @@
 
 .mLinkList {
 	margin-top: 2rem;
-	border-top: 2px solid black;
+	border-top: $border-width solid black;
 	display: flex;
 	flex-direction: column;
 
