--- a/styles/modules/projects.module.scss
+++ b/styles/modules/projects.module.scss
@@ -1,3 +1,4 @@
+@import '../global/variables.scss';
 // MobileProjects.tsx
 
 .mTile {
@@ -57,7 +58,7 @@
 
 	display: flex;
 
-	outline: 2px solid black;
+	outline: $border-width solid black;
 }
 .selectCol {
 	height: 100%;
@@ -67,7 +68,7 @@
 	display: flex;
 	flex-direction: column;
 
-	border-right: solid 2px black;
+	border-right: solid $border-width black;
 }
 .selectCol > div:first-child {
 	height: 20%;
@@ -91,7 +92,7 @@
 	justify-content: center;
 	align-items: center;
 
-	border-bottom: solid black 2px;
+	border-bottom: solid black $border-width;
 }
 .selectCol > div:nth-child(3) {
 	flex-grow: 1;
