--- a/styles/global/variables.scss
+++ b/styles/global/variables.scss
@@ -5,6 +5,7 @@ $bg-primary: #ffffff;
 $bg-secondary: #f5f5f5;
 
 $text-primary: #000000;
+$border-width: 2px;
 
 .bT {
 	border-top: solid 2px black;
