--- a/styles/global/variables.scss
+++ b/styles/global/variables.scss
@@ -1,5 +1,5 @@
 $font-primary: 'IBM Plex Sans', sans-serif;
-$font-secondary: 'IBM Plex Mono', monospace;
+$font-secondary: 'Darker Grotesque', monospace;
 
 $bg-primary: #ffffff;
 $bg-secondary: #f5f5f5;
