--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -211,6 +211,7 @@
 	height: 100%;
 
 	font-family: $font-primary;
+	transition: background-color 0.3s linear;
 
 	&:hover {
 		background: lightgray;
@@ -543,5 +544,35 @@
 			width: 0;
 			height: 0;
 		}
+	}
+}
+
+.card6 {
+	@extend .experience;
+
+	& > img {
+		position: absolute;
+		width: 20%;
+
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+
+	.info {
+		position: absolute;
+		bottom: 0;
+		left: 0;
+
+		display: flex;
+		flex-direction: column;
+
+		padding: 0.5rem 1rem;
+
+		text-transform: uppercase;
+	}
+	.title {
+		font-size: 1.5rem;
+		font-weight: bold;
 	}
 }
