--- a/styles/modules/projects.module.scss
+++ b/styles/modules/projects.module.scss
@@ -163,6 +163,20 @@
 .boxCol > * {
 	position: absolute;
 }
+.boxImg {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 65%;
+	opacity: 0.75;
+	transition: opacity 0.5s ease;
+
+	padding: 1rem 1rem 0 1rem;
+}
+
+.boxImg:hover {
+	opacity: 1;
+}
 .boxLinks {
 	display: flex;
 	justify-content: flex-end;
@@ -170,7 +184,7 @@
 
 	padding: 1rem;
 	gap: 1rem;
-	top: 0%;
+	top: 65%;
 
 	width: 100%;
 }
@@ -182,20 +196,21 @@
 
 	width: 7rem;
 	height: 2.5rem;
-}
 
+	/* Add transition property */
+	transition: background-color 0.3s linear;
+}
 .boxLinks > a:hover {
 	background-color: lightgray;
-	font-weight: bold;
 }
 .boxLinks > a:active {
 	background-color: darkgray;
 }
 .boxGeneral {
 	left: 0;
-	bottom: 20%;
+	top: 65%;
 
-	padding: 1rem 1rem 0 1rem;
+	padding: 0 1rem;
 	width: 100%;
 }
 
@@ -223,6 +238,7 @@
 .boxDescription {
 	width: 75%;
 	min-width: 300px;
+	margin-top: 1rem;
 }
 .boxTools {
 	width: 75%;
