--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -144,10 +144,10 @@
 .experienceContainer {
 	align-items: center;
 	padding: 4rem 4rem 4rem 4rem;
+	margin-bottom: 4rem;
 }
 
 .experienceBox {
-	height: 100%;
 	width: 100%;
 
 	display: flex;
@@ -157,7 +157,7 @@
 }
 
 .experienceBox > div:first-child {
-	height: 7.5%;
+	height: 7.5vh;
 
 	font-size: 2rem;
 	font-weight: bold;
@@ -170,13 +170,12 @@
 }
 
 .experienceScreen {
-	flex: 1;
 	width: 100%;
 
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 }
 .experinceRow {
 	display: flex;
@@ -187,6 +186,16 @@
 	flex: 1;
 	width: 100%;
 }
+.experienceRow1 {
+	@extend .experinceRow;
+
+	width: 100%;
+
+	& > div {
+		flex: 1;
+	}
+}
+
 .experienceRow2 {
 	@extend .experinceRow;
 
@@ -208,7 +217,7 @@
 // Experience.tsx
 .experience {
 	position: relative;
-	height: 100%;
+	height: 30vh;
 
 	font-family: $font-primary;
 	transition: background-color 0.3s linear;
@@ -328,6 +337,27 @@
 .responsibilityContent {
 	padding: 0.5rem;
 	font-size: 0.9rem;
+}
+
+.card0 {
+	@extend .experience;
+	cursor: default !important	;
+
+	.info {
+		position: absolute;
+		bottom: 50%;
+		left: 50%;
+		transform: translate(-50%, 50%);
+		text-transform: uppercase;
+		opacity: 0;
+		transition: opacity 0.3s linear;
+		color: $text-primary;
+	}
+	&:hover {
+		.info {
+			opacity: 1;
+		}
+	}
 }
 
 .card1 {
