--- a/styles/modules/landing.module.scss
+++ b/styles/modules/landing.module.scss
@@ -54,6 +54,8 @@
 .landingContainer {
 	align-items: flex-start;
 	padding: 4rem 4rem 4rem 4rem;
+
+	height: 90vh;
 }
 
 .socialBoxes {
@@ -73,13 +75,17 @@
 	box-sizing: border-box;
 
 	transition: background-color 0.3s linear;
+
+	font-family: $font-primary;
+	text-transform: uppercase;
 }
 
 .socialContent {
 	@extend .socialBox;
 }
 .socialContent:hover {
-	background-color: lightgray;
+	background-color: $text-primary;
+	color: $bg-primary;
 }
 
 .socialFilled {
@@ -97,10 +103,13 @@
 }
 .header > h1 {
 	font-size: 6.5rem;
+	font-weight: $font-primary;
 }
 .header > h3 {
-	font-size: 4rem;
+	font-size: 4.5rem;
 	line-height: 0.5rem;
+
+	font-family: $font-secondary;
 }
 
 .blackOffset {
