--- a/styles/modules/projects.module.scss
+++ b/styles/modules/projects.module.scss
@@ -50,6 +50,7 @@
 .projectContainer {
 	align-items: center;
 	padding: 4rem;
+	height: 90vh;
 }
 
 .box {
@@ -139,7 +140,7 @@
 	padding: 0.5rem;
 }
 .selectorTools {
-	font-size: 0.875rem;
+	font-size: 0.75rem;
 	margin-top: auto;
 }
 .selectorTitle {
@@ -160,6 +161,13 @@
 
 	flex-grow: 1;
 }
+.boxActive {
+	opacity: 1;
+	transition: opacity 0.4s ease;
+}
+.boxInactive {
+	opacity: 0;
+}
 .boxCol > * {
 	position: absolute;
 }
@@ -168,14 +176,13 @@
 	left: 0;
 	width: 100%;
 	height: 65%;
-	opacity: 0.75;
-	transition: opacity 0.5s ease;
-
+	filter: grayscale(90%);
+	transition: filter 0.5s ease;
 	padding: 1rem 1rem 0 1rem;
 }
 
 .boxImg:hover {
-	opacity: 1;
+	filter: grayscale(0%);
 }
 .boxLinks {
 	display: flex;
