--- a/styles/modules/landing.module.scss
+++ b/styles/modules/landing.module.scss
@@ -56,6 +56,12 @@
 	padding: 4rem 4rem 4rem 4rem;
 
 	height: 90vh;
+
+	opacity: 0;
+	transition: opacity 0.5s linear;
+}
+.showActive {
+	opacity: 1;
 }
 
 .socialBoxes {
