--- a/styles/modules/projects.module.scss
+++ b/styles/modules/projects.module.scss
@@ -174,11 +174,11 @@
 .boxImg {
 	top: 0;
 	left: 0;
-	width: 100%;
-	height: 65%;
+	width: calc(100% - 2rem);
+	height: calc(65% - 2rem);
 	filter: grayscale(90%);
 	transition: filter 0.5s ease;
-	padding: 1rem 1rem 0 1rem;
+	margin: 1rem 1rem 0 1rem;
 }
 
 .boxImg:hover {
