--- a/styles/global/variables.scss
+++ b/styles/global/variables.scss
@@ -7,6 +7,8 @@ $bg-secondary: #f5f5f5;
 $text-primary: #000000;
 $border-width: 2px;
 
+$nav-height: 3rem;
+
 .bT {
 	border-top: solid 2px black;
 }
