--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -1,3 +1,5 @@
+@import '../global/variables.scss';
+
 .item > .nav-item {
 	display: inline-block;
 	font-size: 1.15rem;
@@ -19,7 +21,7 @@
 
 	padding: 0 2rem 0 2rem;
 	width: 100%;
-	height: 4rem;
+	height: $nav-height;
 
 	position: sticky;
 	z-index: 100;
@@ -50,5 +52,13 @@
 
 	.item:first-child {
 		font-weight: bold;
+	}
+
+	.item:nth-child(2) {
+		margin-left: auto;
+	}
+
+	.item {
+		cursor: pointer;
 	}
 }
