--- a/styles/global/variables.scss
+++ b/styles/global/variables.scss
@@ -5,9 +5,10 @@ $bg-primary: #ffffff;
 $bg-secondary: #f5f5f5;
 
 $text-primary: #000000;
-$border-width: 2px;
+$border-width: 1px;
 
 $nav-height: 3rem;
+$side-pad: 2rem;
 
 .bT {
 	border-top: solid 2px black;
