--- a/styles/modules/landing.module.scss
+++ b/styles/modules/landing.module.scss
@@ -1,77 +1,178 @@
 @import '../global/variables.scss';
 
-// _base.scss
+// WE ARE SWITCHING COMPLETELY ON BREAKPOINT SM
+
 @mixin text-shadow {
 	text-shadow: -1px 1px 0 #fff, 1px 1px 0 #fff, 1px -1px 0 #fff,
 		-1px -1px 0 #fff;
 }
 
-// _webpage.scss
 .landingContainer {
-	align-items: flex-start;
-	padding: 4rem 4rem 4rem 4rem;
-
+	padding: 4rem;
 	height: calc(100vh - #{$nav-height});
+	position: relative;
 
 	opacity: 0;
 	transition: opacity 0.5s linear;
+
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
+
+	@media only screen and (max-width: $breakpoint-sm) {
+		padding: 2rem;
+		justify-content: flex-start;
+	}
 }
+
 .showActive {
 	opacity: 1;
 }
 
 .socialBoxes {
 	display: grid;
+	grid-template-columns: repeat(3, 9rem);
+	grid-template-rows: repeat(3, 4rem);
 
-	grid-template-columns: 9rem 9rem 9rem;
-	grid-template-rows: 4rem 4rem 4rem;
+	@media only screen and (max-width: $breakpoint-sm) {
+		display: none;
+	}
+
+	.socialBox {
+		height: 100%;
+
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+		box-sizing: border-box;
+
+		transition: background-color 0.3s linear;
+
+		font-family: $font-primary;
+		text-transform: uppercase;
+	}
+
+	.socialContent {
+		@extend .socialBox;
+	}
+
+	.socialContent:hover {
+		background-color: $text-primary;
+		color: $bg-primary;
+	}
+
+	.socialFilled {
+		@extend .socialBox;
+		background-color: black;
+	}
+
+	.socialHidden {
+		@extend .socialBox;
+		visibility: hidden;
+	}
 }
+.locationBox {
+	position: relative;
 
-.socialBox {
-	height: 100%;
+	width: 100%;
+	height: 40vh;
+	background: #f6f6f6;
 
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 
-	box-sizing: border-box;
+	.locationIcon {
+		max-width: 200px;
+		height: 50%;
+	}
 
-	transition: background-color 0.3s linear;
+	.locationText {
+		text-transform: uppercase;
+		font-weight: bold;
+		font-family: $font-secondary;
 
-	font-family: $font-primary;
-	text-transform: uppercase;
-}
+		position: absolute;
+		top: 0;
+		left: 0;
 
-.socialContent {
-	@extend .socialBox;
-}
-.socialContent:hover {
-	background-color: $text-primary;
-	color: $bg-primary;
-}
+		padding: 1rem 0.5rem 0.5rem 2rem;
+	}
+	.locationPin {
+		position: absolute;
+		left: 0;
+		top: 0;
+		padding: 1rem 0.5rem;
+	}
 
-.socialFilled {
-	@extend .socialBox;
-	background-color: black;
-}
-
-.socialHidden {
-	@extend .socialBox;
-	visibility: hidden;
+	@media only screen and (min-width: $breakpoint-sm) {
+		display: none;
+	}
 }
 
 .header {
 	@include text-shadow;
-}
-.header > h1 {
-	font-size: 6.5rem;
-	font-weight: $font-primary;
-}
-.header > h3 {
-	font-size: 4.5rem;
-	line-height: 0.5rem;
 
-	font-family: $font-secondary;
+	div:first-child {
+		font-size: 6rem;
+		font-weight: $font-primary;
+
+		@media only screen and (max-width: $breakpoint-md) {
+			font-size: 3.5rem;
+		}
+
+		@media only screen and (max-width: $breakpoint-xs) {
+			font-size: 2.75rem;
+		}
+	}
+
+	div:nth-child(2) {
+		font-size: 4.5rem;
+		line-height: 1rem;
+
+		font-family: $font-secondary;
+		@media only screen and (max-width: $breakpoint-md) {
+			font-size: 4rem;
+		}
+
+		@media only screen and (max-width: $breakpoint-sm) {
+			margin-bottom: 3rem;
+		}
+
+		@media only screen and (max-width: $breakpoint-xs) {
+			font-size: 2.5rem;
+		}
+	}
+}
+
+.socialsList {
+	display: flex;
+	justify-content: flex-end;
+	flex: 1;
+	align-items: flex-end;
+	flex-direction: column;
+
+	width: 100%;
+	padding: 1rem;
+
+	gap: 0.25rem;
+	div {
+		font-weight: bold;
+	}
+
+	a {
+		font-size: 0.8rem;
+	}
+
+	a:hover {
+		font-weight: bold;
+	}
+
+	@media only screen and (min-width: $breakpoint-sm) {
+		display: none;
+	}
 }
 
 .blackOffset {
@@ -83,19 +184,8 @@
 	width: 30vw;
 	background-color: black;
 	z-index: -1;
-}
 
-@media only screen and (max-width: 1250px) {
-	.blackOffset {
+	@media only screen and (max-width: $breakpoint-md) {
 		display: none;
 	}
-
-	.header > h1 {
-		font-size: 4.5rem !important;
-	}
 }
-
-// main.scss
-// @import '_base';
-// @import '_mobile';
-// @import '_webpage';
