--- a/styles/modules/navbar.module.scss
+++ b/styles/modules/navbar.module.scss
@@ -1,9 +1,13 @@
 @import '../global/variables.scss';
 
-.item > .nav-item {
+.item {
 	display: inline-block;
-	font-size: 1.15rem;
+	font-size: 1rem;
 	box-sizing: border-box;
+
+	@media only screen and (max-width: $breakpoint-sm) {
+		font-size: 0.75rem;
+	}
 }
 
 .item > .nav-item:last-child {
