fixed mobile height?

--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -33,3 +33,15 @@ font-family: 'Raleway', sans-serif;
 	-ms-overflow-style: none; /* IE and Edge */
 	scrollbar-width: none; /* Firefox */
 }
+
+body {
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
+}
+html {
+	height: -webkit-fill-available;
+}
+#main {
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
+}
