--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -55,6 +55,11 @@
 	& .current {
 		font-family: $font-secondary;
 	}
+
+	@media only screen and (max-width: $breakpoint-sm) {
+		width: 100%;
+		border-right: none !important;
+	}
 }
 
 .experienceModal {
@@ -206,225 +211,5 @@
 	.title {
 		font-size: 1.5rem;
 		text-transform: uppercase;
-	}
-}
-
-.card2 {
-	@extend .experience;
-
-	display: flex;
-	flex-direction: column;
-
-	justify-content: center;
-	align-items: center;
-	gap: 0.75rem;
-
-	& > img {
-		width: 4rem;
-	}
-
-	.title {
-		font-size: 2rem;
-		font-weight: bold;
-	}
-}
-
-.card3 {
-	@extend .experience;
-
-	display: flex;
-	flex-direction: column;
-
-	justify-content: center;
-	align-items: center;
-	.circle {
-		height: 100%;
-		width: 100%;
-
-		border-radius: 50%;
-		border: 1.5px solid black;
-
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-
-		gap: 0.5rem;
-	}
-	.circle > img {
-		width: 4rem;
-	}
-
-	.title {
-		font-size: 2rem;
-		font-weight: bold;
-	}
-}
-
-.card4 {
-	@extend .experience;
-
-	display: flex;
-	flex-direction: column;
-
-	justify-content: center;
-	align-items: center;
-
-	.row {
-		width: 100%;
-		height: 20%;
-
-		display: flex;
-
-		border-bottom: 1px solid black;
-	}
-
-	.imgContainer {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-
-		img {
-			width: 50%;
-			max-height: 90%;
-		}
-	}
-
-	.row > * {
-		height: 100%;
-	}
-	.row > div:not(:first-child) {
-		width: 40%;
-		border-left: solid black 1px;
-	}
-	.row > div:first-child {
-		flex: 1;
-	}
-
-	.contentRow {
-		@extend .row;
-
-		flex: 1;
-	}
-
-	img {
-		width: 100%;
-		max-width: 100%;
-		max-height: 100%;
-	}
-
-	.title {
-		font-size: 1.5rem;
-		font-weight: bold;
-
-		padding: 0.5rem;
-		overflow: hidden;
-		overflow-wrap: break-word;
-
-		text-transform: uppercase;
-	}
-}
-.card5 {
-	position: relative;
-	height: 100%;
-	width: 100%;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	.line {
-		position: absolute;
-		background-color: #000;
-	}
-	.innerBox {
-		position: absolute;
-		width: 75%;
-		height: 75%;
-
-		border: solid $border-width black;
-
-		& > img {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50%, -50%);
-			width: 5rem;
-		}
-
-		.info {
-			top: 0;
-			left: 0;
-
-			display: flex;
-			flex-direction: column;
-
-			padding: 0.5rem 1rem;
-		}
-		.title {
-			font-size: 1.5rem;
-			font-weight: bold;
-		}
-	}
-
-	.lineVertical {
-		@extend .line;
-		width: $border-width;
-		height: 100%;
-		left: 75%;
-	}
-
-	.lineHorizontal {
-		@extend .line;
-		width: 100%;
-		height: $border-width;
-		top: 30%;
-	}
-
-	// &:hover .lineHorizontal,
-	// &:hover .lineVertical {
-	// 	animation: shrink 1s forwards;
-	// }
-
-	&:hover {
-		background: lightgray;
-	}
-
-	@keyframes shrink {
-		to {
-			width: 0;
-			height: 0;
-		}
-	}
-}
-
-.card6 {
-	@extend .experience;
-
-	& > img {
-		position: absolute;
-		width: 20%;
-
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-	}
-
-	.info {
-		position: absolute;
-		bottom: 0;
-		left: 0;
-
-		display: flex;
-		flex-direction: column;
-
-		padding: 0.5rem 1rem;
-
-		text-transform: uppercase;
-	}
-	.title {
-		font-size: 1.5rem;
-		font-weight: bold;
 	}
 }
