--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -28,13 +28,10 @@ font-family: 'Raleway', sans-serif;
 }
 
 body {
-	min-height: 100vh;
+	position: fixed;
+	height: 100%;
+}
 
-	min-height: -webkit-fill-available;
-}
-html {
-	height: -webkit-fill-available;
-}
 *::-webkit-scrollbar {
 	display: none;
 }
