--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -28,8 +28,12 @@ font-family: 'Raleway', sans-serif;
 }
 
 body {
-	position: fixed;
-	height: 100%;
+	min-height: 100vh;
+	min-height: -webkit-fill-available;
+}
+
+html {
+	height: -webkit-fill-available;
 }
 
 *::-webkit-scrollbar {
