--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -27,13 +27,9 @@ font-family: 'Raleway', sans-serif;
 	scrollbar-width: none; /* Firefox */
 }
 
-body {
-	min-height: 100vh;
-	min-height: -webkit-fill-available;
-}
-
-html {
-	height: -webkit-fill-available;
+.main {
+	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+	height: calc(var(--vh, 1vh) * 100);
 }
 
 *::-webkit-scrollbar {
