--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -27,7 +27,7 @@ font-family: 'Raleway', sans-serif;
 	scrollbar-width: none; /* Firefox */
 }
 
-.main {
+#main {
 	height: 100vh; /* Fallback for browsers that do not support Custom Properties */
 	height: calc(var(--vh, 1vh) * 100);
 }
