--- a/styles/modules/experience.module.scss
+++ b/styles/modules/experience.module.scss
@@ -3,12 +3,12 @@
 // Experiences.tsx
 .experienceContainer {
 	align-items: center;
-
 	margin-bottom: 2rem;
+
 }
 
 .header {
-	height: 3rem;
+	height: $nav-height;
 	width: 100%;
 
 	border-bottom: solid black $border-width;
@@ -32,6 +32,7 @@
 	display: flex;
 	align-items: center;
 	flex-wrap: wrap;
+	height: calc(100% - $nav-height);
 }
 
 // Experience.tsx
